[FIX] m.VariantManagement: correct overlap when in text mode
SNOW: DINC0114924
SNOW: CS20240008660195
SNOW: DINC0490417

(cherry picked from commit 204e53def7e694f229d02c3e6326e9593d6e8251)
CR-Id: 002075125900001930902025

--- a/src/sap.m/src/sap/m/themes/base/VariantManagement.less
+++ b/src/sap.m/src/sap/m/themes/base/VariantManagement.less
@@ -50,6 +50,9 @@
     font-size: 1rem;
     white-space: nowrap;
     vertical-align: middle;
+    position: relative;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .sapMVarMngmt .sapMVarMngmtModified {
